# DataWarehouseOps-Env

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  ollama_agent.py  ollama_results.txt  openenv.yaml  pyproject.toml  requirements.txt  run.sh
server/: app.py  environment.py
server/data/: generator.py  task1_seed.sql  task2_seed.sql  task3_seed.sql
server/graders/: task1_grader.py  task2_grader.py  task3_grader.py
server/static/: index.html
