[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-warehouse-ops-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for real-world data engineering tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "data-engineering", "sql", "pii", "rl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "requests>=2.32",
    "openai>=1.60",
]

[project.scripts]
datawarehouse-env-server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
